# Student-project-request-portal-using-Flask

./: .replit  README.md  app.py  pyproject.toml
templates/: home.html  login.html  register.html  submit_request.html
